# InsightFlow

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0f6736b8f35d_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  datasets.py  query.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: __init__.py  analytics.py  datasource.py  tenant.py
backend/app/services/: agent_runner.py  agents.py
docs/: AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  BACKEND_STRUCTURE.md  DATABASE_SCHEMA.md  DATA_INGESTION.md  DESIGN_SYSTEM.md  FRONTEND_STRUCTURE.md  IMPLEMENTATION_ROADMAP.md  PRD.md  PROJECT_SETUP.md  REPOSITORY_STRUCTURE.md  STARTUP_GUIDE.md  TASKS.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/features/chat/: ChatWorkspaceView.tsx
frontend/src/features/dashboard/: DashboardView.tsx
frontend/src/routes/: ProtectedRoute.tsx  index.tsx
n8n/: daily_data_refresh.json  forecast_generation_workflow.json  kpi_alert_workflow.json  weekly_executive_report.json
