[tool.poetry]
name = "insightflow-backend"
version = "1.0.0"
description = "FastAPI backend & LangGraph agent platform for InsightFlow"
authors = ["Senior Backend Engineer <engineering@insightflow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^42.0.5"
langchain = "^0.1.13"
langgraph = "^0.0.32"
langchain-community = "^0.0.29"
redis = "^5.0.3"
celery = "^5.3.6"
structlog = "^24.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"
pgvector = "^0.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
