[tool.poetry]
name = "insightflow-backend"
version = "1.0.0"
description = "FastAPI backend & LangGraph agent platform for InsightFlow"
authors = ["Senior Backend Engineer <engineering@insightflow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^43.0.1"
langchain = ">=0.3.2"
langgraph = ">=0.2.39"
langchain-core = ">=0.3.15"
langchain-ollama = ">=0.2.0"
redis = "^5.1.1"
celery = "^5.4.0"
structlog = "^24.4.0"
prometheus-fastapi-instrumentator = "^7.1.0"
pgvector = "^0.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
